Fixed input field issue on Firefox.

--- a/app/assets/stylesheets/_forms.css.scss
+++ b/app/assets/stylesheets/_forms.css.scss
@@ -1,5 +1,5 @@
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="week"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], textarea {
-  padding: 1em .75em;
+  padding: .25em;
   font-size: 1em;
   border-radius: 5px;
   text-transform: auto;
